# LearningGL

./: CMakeLists.txt  Mesh.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  main.cpp
Resources/: fragment_shader.glsl  vertex_shader.glsl
Utils/: CMakeLists.txt  FileLoader.cpp  FileLoader.hpp
